change your habits section complete

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <!-- navbar section -->
         <nav class="navbar display-flex ">
             <h2 class="nav-title pri-color black"><i>Fitness</i></h2>
-            <ul class="nav-links display-flex">
+            <ul class="nav-links display-flex ">
                 <li class="link-item">
-                    <a href="" class="nav-link  btn-primary">Home</a>
+                    <a href="" class="nav-link  btn-primary ">Home</a>
                 </li>
                 <li class="link-item">
-                    <a href="" class="nav-link">Service</a>
+                    <a href="" class="nav-link ">Service</a>
                 </li>
                 <li class="link-item">
-                    <a href="" class="nav-link">Contact</a>
+                    <a href="" class="nav-link ">Contact</a>
                 </li>
                 <li class="link-item">
                     <a href="" class="nav-link">About</a>
@@ -35,7 +35,7 @@
         <div class="banner">
             <div class="banner-content">
               <h1 class="banner-title">Get body in <br><span class="font-miama">shape </span>& stay <br>healthy</h1>
-              <p class="des-color description">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
+              <p class="des-color description secondery-color">A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
               <div class="display-flex buttons">
                 <button class="btn-primary">Join Club Now!</button>
               <button class="btn-primary d-button">Download App</button>
@@ -61,7 +61,44 @@
            </div>
     </header>
     <main>
-        
+      <!-- change you habits -->
+        <section>
+            <div class="content">
+              <h2 class="content-title">Change Your Habits</h2>
+              <p class="secondery-color">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+            </div>
+           <div class="image-card-container">
+            <div class="cards">
+              <img class="circle-image" src="images/image 3.png" alt="">
+              <div class="text-content">
+                <h4 class="title">Movement</h4>
+              <p class="secondery-color">We believe fitness should be <br>accessible to everyone </p>
+              </div>
+            </div>
+            <div class="cards">
+              <img class="circle-image" src="images/image 2.png" alt="">
+              <div class="text-content">
+                <h4 class="title">Time</h4>
+              <p class="secondery-color">We believe fitness should be <br>accessible to everyone </p>
+              </div>
+            </div>
+            <div class="cards">
+              <img class="circle-image" src="images/image 4.png" alt="">
+              <div class="text-content">
+                <h4 class="title">Practice</h4>
+              <p class="secondery-color">We believe fitness should be <br>accessible to everyone </p>
+              </div>
+            </div>
+            <div class="cards">
+              <img class="circle-image" src="images/image 5.png" alt="">
+              <div class="text-content">
+                <h4 class="title">Weight Loss</h4>
+              <p class="secondery-color">We believe fitness should be <br>accessible to everyone </p>
+              </div>
+            </div>
+           
+           </div>
+        </section>
     </main>
     <footer>
 
