hero design complete

--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
            
            </div>
         </section>
+        <section class="hero">
+          <div class="hero-container display-flex">
+            <div class="hero-content">
+              <h2 class="hero-title">
+                Run an Extra <br> Mile Easily
+              </h2>
+              <p class="secondery-color hero-des">If you’re looking to build your muscles and get into shape, a bodybuilding gym <br> can be the right choice for you.  Bodybuilding gyms come in all shapes and sizes (literally),<br> and there are many different kinds of them. Some are just places where people go to lift<br> weights; others are full-service gym facilities like Body Sculpting</p>
+              <button class="btn-primary hero-btn">Join Now</button>
+            </div>
+            <div class="hero-image"><img src="images/run.jpg" alt=""></div>
+          </div>
+        </section>
     </main>
     <footer>
 
