--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
            
            </div>
         </section>
+        <!-- hero hero hero hero -->
         <section class="hero">
           <div class="hero-container display-flex">
             <div class="hero-content">
@@ -110,6 +111,20 @@
             </div>
             <div class="hero-image"><img src="images/run.jpg" alt=""></div>
           </div>
+        </section>
+        <!-- optional part -->
+        <section class="hero">
+          <div class="image-optional">
+            <img src="images/exercise1.jpg" alt="" class="image-1">
+            <img src="images/exercise2.png" alt="" class="image-2">
+            <img src="images/exercise3.png" alt="" class="image-3">
+          </div>
+          <div class="image-optional">
+            <img src="images/exercise4.png" alt="" class="image-4">
+            <img src="images/exercise5.jpg" alt="" class="image-5">
+            <img src="images/exercise6.jpg" alt="" class="image-6">
+
+          </div>            
         </section>
     </main>
     <footer>
