meet our teams section design and resposive complete

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h2 class="hero-title">Traning and Exercises</h2>
             <p class="secondery-color">We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
           </div>
-          <div class="image-optional margin">
+          <div class="image-optional">
             <img src="images/exercise1.jpg" alt="" class="image-1">
             <img src="images/exercise2.png" alt="" class="image-2">
             <img src="images/exercise3.png" alt="" class="image-3">
@@ -195,7 +195,66 @@
             </div>
           </div>
          </section>
+         <!-- teams content -->
+          <section>
+            <div class="main-text-content section margin team-text">
+              <div>
+                <h1 class="bmi-title">Meet Our Team</h1>
+              <p class="secondery-color">Free Body Mass Index calculator gives out the BMI value and categorizes BMI based on provided <br> information from WHO and CDC for both adults and children.</p>
+              </div>
+            </div>
+          </section>
        <!-- meeet our team -->
+        <section class="section teams ">
+          <!-- team1 -->
+           <div class="team-member">
+            <img class="trainer" src="images/trainer1.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Jermome Bell</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+            <!-- team2 -->
+           <div class="team-member ">
+            <img class="trainer" src="images/trainer2.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Cameron Willilamson</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+            <!-- team3 -->
+           <div class="team-member ">
+            <img class="trainer" src="images/trainer3.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Darrell Steward</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+            <!-- team4 -->
+           <div class="team-member ">
+            <img class="trainer" src="images/trainer4.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Dianne Russell</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+            <!-- team5 -->
+           <div class="team-member ">
+            <img class="trainer" src="images/trainer5.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Cody Fisher</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+            <!-- team6 -->
+           <div class="team-member ">
+            <img class="trainer" src="images/trainer6.png" alt="">
+            <div class="team-profile">
+              <h4 class="name">Theresa Webb</h4>
+              <p class="secondery-color">Trainer</p>
+            </div>
+           </div>
+        </section>
     </main>
     <footer>
 
