--- a/index.html
+++ b/index.html
@@ -256,9 +256,39 @@
            </div>
         </section>
     </main>
-    <footer>
-
-
+    <footer class="footer margin">
+      <div class="footer-container display-flex">
+         <div class="left">
+              <h1 class="footer-title">
+                <i>Fitness</i>
+              </h1>
+              <p class="secondery-color">
+                We believe fitness should be accessible to everyone, <br>    everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.
+              </p>
+         </div>
+        <div class="right display-flex">
+          <div>
+            <h2 class="right-title">Get Started</h2>
+            <ul class="footer-list secondery-color">
+              <li>Service</li>
+              <li>Contact Us</li>
+              <li>Affiliate Program</li>
+              <li>About Us</li>
+            </ul>
+       </div>
+       <div>
+        <h2 class="right-title">Get Started</h2>
+          <ul class="footer-list secondery-color">
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Library</li>
+            <li>Equivements</li>
+          </ul>
+       </div>
+        </div>
+      </div>
+      <hr>
+      <h4 class="copyright secondery-color">All right reserved @Fitness 2024</h4>
     </footer>
 </body>
 </html>
