finished without my contributes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <section class="margin section">
           <div class="margin">
             <h2 class="hero-title">Traning and Exercises</h2>
-            <p class="secondery-color">We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
+            <p class="secondery-color optional-des">We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
           </div>
           <div class="image-optional">
             <img src="images/exercise1.jpg" alt="" class="image-1">
