my feature added

--- a/index.html
+++ b/index.html
@@ -195,6 +195,26 @@
             </div>
           </div>
          </section>
+         <!-- our speacial clients -->
+          <section>
+            <div class="main-text-content section margin team-text">
+              <div>
+                <h1 class="bmi-title">Our Happy Clients Gallery</h1>
+              <p class="secondery-color">Free Body Mass Index calculator gives out the BMI value and categorizes BMI based on provided <br> information from WHO and CDC for both adults and children.</p>
+              </div>
+            </div>
+            <div class="section margin">
+              <div class="clients display-flex">
+                <img src="new/Gym-in-your-Society.jpg" alt="" class="client">
+                <img src="new/Man-training-in-one-of-the-body-building-gyms-1080x675.jpg" alt="" class="client">
+              </div> 
+              <div class="clients display-flex">
+                <img src="new/6-rowing-machine.jpg" alt="" class="client">
+                <img src="new/tap-gym-yeu-sinh-ly.jpg" alt="" class="client">
+              </div>
+              <img src="new/plank.jpg" alt="" class="client">
+            </div>
+          </section>
          <!-- teams content -->
           <section>
             <div class="main-text-content section margin team-text">
